src/envoy_upgrade.yaml
# Sandbox envoy config without xds server
# Log admin api calls to stdout where systemd can
# pick it up
admin:
  access_log:
  - name: envoy.access_loggers.file
    typed_config:
      "@type":  type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
      path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  # The static http listener only does the work
  # of redirecting users to the the https:// listener
  - name: http
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          http_protocol_options:
            accept_http_10: true
            default_host_for_http_10: "sandbox.juspay.io"
          stat_prefix: redirect_http
          route_config:
            name: redirect_config
            virtual_hosts:
              - name: redirect_route
                domains: ["*"]
                routes:
                  - match:
                      prefix: "/"
                    redirect:
                      https_redirect: true
                      host_redirect: "sandbox.juspay.io"
                      response_code: FOUND
          add_user_agent: true
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          common_http_protocol_options:
            idle_timeout: 840s
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type":  type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /var/log/envoy/listener-http_access.log
              log_format:
                text_format_source:
                  inline_string: |
                      [%START_TIME%] "%REQ(:METHOD)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% %UPSTREAM_CLUSTER% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" "%REQ(x-merchantid?:x-jp-merchant-id)%" "%REQ(CONTENT-TYPE)%"
  - name: https
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
              certificate_chain: { "filename": "/etc/envoy/ssl/cert.crt" }
              private_key: { "filename": "/etc/envoy/ssl/nopass.key" }
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          http_protocol_options:
            accept_http_10: true
            default_host_for_http_10: "sandbox.juspay.io"
          stat_prefix: ingress_http
          upgrade_configs:
          - upgrade_type: websocket
          server_name: "***"
          use_remote_address: true
          skip_xff_append: false
          xff_num_trusted_hops: 1
          add_user_agent: true
          common_http_protocol_options:
            idle_timeout: 840s
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type":  type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /var/log/envoy/listener-https_access.log
              log_format:
                json_format:
                  "protocol": "%PROTOCOL%"
                  "upstream_service_time": "%REQ(x-envoy-upstream-service-time)%"
                  "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%"
                  "duration": "%DURATION%"
                  "upstream_transport_failure_reason": "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
                  "route_name": "%ROUTE_NAME%"
                  "downstream_local_address": "%DOWNSTREAM_LOCAL_ADDRESS%"
                  "user_agent": "%REQ(USER-AGENT)%"
                  "response_code": "%RESPONSE_CODE%"
                  "response_flags": "%RESPONSE_FLAGS%"
                  "start_time": "%START_TIME%"
                  "request_method": "%REQ(:METHOD)%"
                  "request_id": "%REQ(X-REQUEST-ID)%"
                  "upstream_host": "%UPSTREAM_HOST%"
                  "x_forwarded_for": "%REQ(X-FORWARDED-FOR)%"
                  "client_ip": "%REQ(True-Client-Ip)%"
                  "requested_server_name": "%REQUESTED_SERVER_NAME%"
                  "bytes_received": "%BYTES_RECEIVED%"
                  "bytes_sent": "%BYTES_SENT%"
                  "upstream_cluster": "%UPSTREAM_CLUSTER%"
                  "downstream_remote_address": "%DOWNSTREAM_REMOTE_ADDRESS%"
                  "authority": "%REQ(:AUTHORITY)%"
                  "path": "%REQ(X-MASKED-PATH?:PATH)%"
                  "response_code_details": "%RESPONSE_CODE_DETAILS%"
                  "content_type": "%REQ(CONTENT-TYPE)%"
                  "x_merchant_id": "%REQ(x-merchantid?:-)%"
                  "x_payment_method_type": "%REQ(x-payment-method-type?:-)%"
                  "x_tenant_host": "%REQ(x-tenant-host?:-)%"
          http_filters:
          - name: envoy.filters.http.lua
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
              default_source_code:
                inline_string: |
                  function envoy_on_request(request_handle)
                    request_handle:logInfo("on_request")
                  end
              source_codes:
                auth.lua:
                  filename: "/etc/envoy/lua/auth.lua"
          - name: envoy.filters.http.ratelimit
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
              domain: hyperswitch_api_key_prod_ratelimit
              request_type: external
              failure_mode_deny: false
              enable_x_ratelimit_headers: DRAFT_VERSION_03
              rate_limit_service:
                transport_api_version: V3
                grpc_service:
                  envoy_grpc:
                    cluster_name: ratelimit_service
          - name: envoy.filters.http.router
            typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
                  name: sandbox_route_config
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "sandbox.juspay.io"
                        - "sandbox-router.juspay.io"
                        - "sandbox.console.juspay.io"
                        - "sandbox.hyperswitch.io"
                        - "sandbox.hyperswitch.juspay.in"
                        - "integ-api.hyperswitch.io"
                      routes:
                        - match:
                            prefix: "/ironman"
                          route:
                            timeout: 60s
                            idle_timeout: 60s
                            cluster: eu-edge
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: local_rate_limit
                              token_bucket:
                                max_tokens: 10
                                tokens_per_fill: 10
                                fill_interval: 60s
                              filter_enabled:
                                runtime_key: local_rate_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: local_rate_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              response_headers_to_add:
                                - append: false
                                  header:
                                    key: x-local-rate-limit
                                    value: "true"
                        - match:
                            prefix: "/"
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              source_code:
                                inline_string: |
                                  function envoy_on_request(request_handle)
                                    request_handle:headers():remove("x-merchant-id")
                                    request_handle:headers():remove("x-key-id")
                                    request_handle:headers():remove("x-auth-type")
                                    request_handle:headers():remove("x-checksum")
                                    request_handle:logInfo("Headers Sanitized")
                                  end
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              name: auth.lua
                          route:
                            timeout: 60s
                            idle_timeout: 60s
                            cluster: eu-edge
                    - name: health_check
                      domains: ["*"]
                      routes:
                        - match:
                            path: "/ping"
                          direct_response:
                            status: 200
                            body:
                              inline_string: '{"status": "ok"}'
          local_reply_config:
            mappers:
              - filter:
                  status_code_filter:
                    comparison:
                      op: EQ
                      value:
                        default_value: 429
                        runtime_key: key_b
                status_code: 429
                body_format_override:
                  text_format: |
                          <!DOCTYPE html>
                          <html>
                          <head>
                            <title>Rate Limit Exceeded</title>
                          </head>
                          <body>
                            <h1>Rate Limit Exceeded</h1>
                            <p>Too Many Requests - You have exceeded the rate limit. Please try again after a short while.</p>
                            <p>For more information, please visit <a href="https://docs.hyperswitch.io">this link</a>.</p>
                          </body>
                          </html>
                  content_type: "text/html; charset=UTF-8"
  clusters:
  - name: eu-edge
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: eu-edge
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: internal-k8s-ekseuc1hyperswitc-22611f5397-1692751531.eu-central-1.elb.amazonaws.com
                    port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        # sni: "sandbox.juspay.io"
        # allow_renegotiation: true
  - name: ratelimit_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        upstream_http_protocol_options:
          auto_sni: true
        explicit_http_config:
          http2_protocol_options: {}
    protocol_selection: USE_CONFIGURED_PROTOCOL
    load_assignment:
      cluster_name: ratelimit_service
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: ratelimiter-lb-97592653585a7d56.elb.eu-central-1.amazonaws.com
                    port_value: 8091
